Add text labels to bar chart and include terminal output for new benchmark

--- a/plots.ipynb
+++ b/plots.ipynb
@@ -106,6 +106,10 @@
     "    ax.set_ylabel(title)\n",
     "    ax.set_xlabel(\"Branch Predictors\")\n",
     "    ax.set_title(title + \" for Each Benchmark\")\n",
+    "\n",
+    "    for i, value in enumerate(yvalues):\n",
+    "        ax.text(i, value, str(value), ha='center', va='bottom')\n",
+    "    \n",
     "    plt.savefig(title + \".png\", bbox_inches=\"tight\")\n",
     "    plt.show()\n",
     "\n"
