Small line change

--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -334,7 +334,7 @@ Therefore, by adding these two components to the branch predictor, it becomes mo
 
 \subsection{Impact of ``Smartness" of BP}
 
-Our results indicate that the ``smartness" of the branch predictor, i.e., more accurate predictions, is a major factor in how susceptible it is to Spectre. The trend observed is that the more accurate the branch predictor is, the more susceptible it is to Spectre.
+Our results indicate that the ``smartness" of the branch predictor, i.e., less training to get more accurate predictions, is a major factor in how susceptible it is to Spectre. The trend observed is that the more accurate the branch predictor is, the more susceptible it is to Spectre.
 
 \begin{figure}
     \centering
